@@ -1,5 +1,13 @@
 2006-06-05  Adam Jocksch  <ajocksch@redhat.com>
 
+	* Elf.cxx (elf_getident): Fixed 64bit bug.
+	(elf_getshnum): Ditto.
+	(elf_getshstrndx): Ditto.
+	(elf_getarsym): Ditto.
+	(elf_rawfile): Ditto.
+
+2006-06-05  Adam Jocksch  <ajocksch@redhat.com>
+
 	* Elf.cxx: Now uses alloca instead of malloc.
 
 2006-06-02  Yao Qi  <qiyaoltc@cn.ibm.com>
